--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "primitivemap",
-	"version": "0.0.11",
-	"description": "int->int, int->long, and string->string map data structures created outside the JS heap using the Google sparsehash implementation.",
+	"version": "0.0.12",
+	"description": "(string|int32)->(string|int32|double) map data structures created outside the JS heap using the Google sparsehash implementation.",
 	"main": "./primitivemap",
 	"author": "Liam Doherty",
 	"dependencies" : {},
